Add Python skills info

--- a/skills.html
+++ b/skills.html
@@ -391,6 +391,8 @@
       <h4>Data analysis</h4>
       <p>I learnt <b>R</b> during modules on the Q-step part of my geography course, learning about basic data cleaning
         and analysis, and later working on more advanced statistical techniques.</p>
+      <p>I've learnt <b>Python</b> on my course at Cardiff, and have used it for similar data analysis technqiues, and
+        started looking into text analysis using the NLTK libraries.</p>
       <ul>
         <li>Data cleaning</li>
         <li>Descriptive statistics</li>
@@ -399,6 +401,7 @@
         <li>Missing data analysis</li>
         <li>PCA, SEM, CFA/EFA</li>
         <li>Cluster analysis</li>
+        <li>Text analysis (basic Natural Language Processing)</li>
       </ul>
     </div>
 
