--- a/work.html
+++ b/work.html
@@ -54,6 +54,17 @@
     <div class="row justify-content-md-center mb-5">
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
+          <img class="work-img" src="work/icon-eu-climate.png" alt="EU climate change targets emissions"></a>
+          <div class="overlay">
+            <a href=https://compjcdf.github.io/climate-kidz/ target="blank">
+              <div class="text"><b>Cardiff University</b> The EU & Climate Targets
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="work-item">
           <img class="work-img" src="work/icon-GI-india.png" alt="graphical insight india"></a>
           <div class="overlay">
             <a href="work/indian-doctors-GI.png" target="blank" alt="graphical insight india">
