Add dataviz assignment to work (wfh)

--- a/work.html
+++ b/work.html
@@ -65,6 +65,17 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
+          <img class="work-img" src="work/icon-remote.png" alt="wfh remote workers"></a>
+          <div class="overlay">
+            <a href=https://h-robertson.github.io/workingfromhome/ target="blank">
+              <div class="text"><b>Cardiff University</b>Working From Home
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="work-item">
           <img class="work-img" src="work/icon-GI-india.png" alt="graphical insight india"></a>
           <div class="overlay">
             <a href="work/indian-doctors-GI.png" target="blank" alt="graphical insight india">
