Add GNI fellowship

--- a/experience.html
+++ b/experience.html
@@ -55,16 +55,26 @@
       <tbody>
         <tr>
           <th scope="row">
-            <date datetime="2019-09-20">September 2019</date>
+            <date datetime="2020-07-27">July 2020</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-red.png">
           </td>
           <td>
-            <h4 class="current">Cardiff University: MSc Computational & Data Journalism</h4>
+            <h4 class="current">The Guardian: Google News Fellowship 2020</h4>
           </td>
         </tr>
-
+        <tr>
+          <th scope="row">
+            <date datetime="2019-09-20">September 2019</date>
+          </th>
+          <td class="dot">
+            <img style="display:block;" src="imgs/timeline-dot-teal.png">
+          </td>
+          <td>
+            <h4> Cardiff University: MSc Computational & Data Journalism</h4>
+          </td>
+        </tr>
         <tr>
           <th scope="row">
             <date datetime="2019-07-01">July 2019</date>
