Keep cardiff course current too

--- a/experience.html
+++ b/experience.html
@@ -69,10 +69,10 @@
             <date datetime="2019-09-20">September 2019</date>
           </th>
           <td class="dot">
-            <img style="display:block;" src="imgs/timeline-dot-teal.png">
+            <img style="display:block;" src="imgs/timeline-dot-red.png">
           </td>
           <td>
-            <h4> Cardiff University: MSc Computational & Data Journalism</h4>
+            <h4 class="current"> Cardiff University: MSc Computational & Data Journalism</h4>
           </td>
         </tr>
         <tr>
