--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<!-- Main page -->
 	<div class="site-content container-fluid ">
 		<div class="aboutme-text">
-			<p>My name is Helena (Helli) Robertson and I'm currently a student on Cardiff University's MSc in
+			<!-- <p>My name is Helena (Helli) Robertson and I'm currently a student on Cardiff University's MSc in
 				Computational and Data Journalism.</p>
 			<p>I became interested in data visualisation when I was finishing
 				school, and went to study Geography at UCL on their Q-step course, where I worked on data
@@ -61,20 +61,24 @@
 			</p>
 
 			<p>Having found that data journalism provides a great place to combine skills of research, analysis, design
-				and clear, concise writing, I am now looking for professional opportunities to join this field.</p>
+				and clear, concise writing, I am now looking for professional opportunities to join this field.</p> -->
 
-			<!-- <p>My name is Helena (Helli) Robertson and I'm currently the Google News Fellow at the Guardian, working with the Visuals team to create ???.</p>
-			<p>I'm also enrolled on the MSc in Computational and Data Journalism at Cardiff University which I will finish this autumn.</p>
+			<p>My name is Helena (Helli) Robertson and I'm currently the Google News Fellow the Guardian, working with
+				their Visuals team.</p>
+			<p>I'm also enrolled on the MSc in Computational and Data Journalism at Cardiff University which I will
+				finish this autumn.</p>
 			<p>I became interested in data visualisation when I was finishing
 				school, and went to study Geography at UCL on their Q-step course, where I worked on data
 				analysis, mapping and visualisation skills.</p>
 			<p>During my undergraduate course, I found out more about data journalism, undertaking an
 				internship with the Data and Visual Journalism team at the Financial Times during my penultimate year.
 			</p>
-			<p>I enrolled on the course at Cardiff to learn more about the journalistic side of the field and how to create engaging interactive graphics and stories.</p>
+			<p>I enrolled on the course at Cardiff to learn more about the journalistic side of the field and how to
+				create engaging interactive graphics and stories.</p>
 
-			<p>Over these past few years, I've found that data journalism provides a great place to combine my interests of research, analysis, design
-				and clear, concise writing, and I am now seeking professional opportunities in this field.</p> -->
+			<p>Over these past few years, I've found that data journalism provides a great place to combine my interests
+				of research, analysis, design
+				and clear, concise writing, and I am now seeking professional opportunities in this field.</p>
 		</div>
 		<div class="row justify-content-md-center mb-5">
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
