--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			<p>Having found that data journalism provides a great place to combine skills of research, analysis, design
 				and clear, concise writing, I am now looking for professional opportunities to join this field.</p> -->
 
-			<p>My name is Helena (Helli) Robertson and I'm currently the Google News Fellow the Guardian, working with
-				their Visuals team.</p>
+			<p>My name is Helena (Helli) Robertson</p>
+			<p>I'm currently working with the Guardian's Visuals team as their Google News Fellow.</p>
 			<p>I'm also enrolled on the MSc in Computational and Data Journalism at Cardiff University which I will
 				finish this autumn.</p>
 			<p>I became interested in data visualisation when I was finishing
