--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 			<p>Having found that data journalism provides a great place to combine skills of research, analysis, design
 				and clear, concise writing, I am now looking for professional opportunities to join this field.</p> -->
 
-			<p>My name is Helena (Helli) Robertson</p>
-			<p>I'm currently working with the Guardian's Visuals team as their Google News Fellow.</p>
-			<p>I'm also enrolled on the MSc in Computational and Data Journalism at Cardiff University which I will
+			<h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
+			<p>I'm currently working with the Guardian's Visuals team as their Google News Fellow and am also enrolled
+				on the MSc in Computational and Data Journalism at Cardiff University which I will
 				finish this autumn.</p>
 			<p>I became interested in data visualisation when I was finishing
 				school, and went to study Geography at UCL on their Q-step course, where I worked on data
