--- a/work.html
+++ b/work.html
@@ -52,6 +52,17 @@
   <!-- Main page -->
   <div class="site-content container-fluid ">
     <div class="row justify-content-md-center mb-5">
+      <!-- <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="work-item">
+          <img class="work-img" src="work/icon-gu-ec-explainer.png" alt="Guardian electoral college explainer"></a>
+          <div class="overlay">
+            <a href="" target="blank">
+              <div class="text"><b>Guardian Visuals</b> Electoral college explained
+              </div>
+            </a>
+          </div>
+        </div>
+      </div> -->
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
           <img class="work-img" src="work/icon-eu-climate.png" alt="EU climate change targets emissions"></a>
