--- a/work.html
+++ b/work.html
@@ -54,6 +54,18 @@
     <div class="row justify-content-md-center mb-5">
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
+          <img class="work-img" src="work/icon-gu-path-to-victory.png" alt="Guardian path to victory interactive"></a>
+          <div class="overlay">
+            <a href="https://www.theguardian.com/us-news/ng-interactive/2020/sep/28/us-election-simulator-swing-states-biden-trump"
+              target="blank">
+              <div class="text"><b>Guardian Visuals</b> Build your own US election interactive
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="work-item">
           <img class="work-img" src="work/icon-gu-ec-explainer.png" alt="Guardian electoral college explainer"></a>
           <div class="overlay">
             <a href="https://www.theguardian.com/us-news/ng-interactive/2020/sep/02/electoral-college-explained-biden-uphill-battle-us-election"
@@ -64,6 +76,7 @@
           </div>
         </div>
       </div>
+
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
           <img class="work-img" src="work/icon-eu-climate.png" alt="EU climate change targets emissions"></a>
