add us-elex dashboard to work

--- a/work.html
+++ b/work.html
@@ -54,11 +54,22 @@
     <div class="row justify-content-md-center mb-5">
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <div class="work-item">
+          <img class="work-img" src="work/icon-us-elex-dashboard.png" alt="US election interactive dashboard"></a>
+          <div class="overlay">
+            <a href="https://h-robertson.github.io/us-election-dashboard/" target="blank">
+              <div class="text"><b>Cardiff University </b></br>US election dashboard
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="work-item">
           <img class="work-img" src="work/icon-gu-path-to-victory.png" alt="Guardian path to victory interactive"></a>
           <div class="overlay">
             <a href="https://www.theguardian.com/us-news/ng-interactive/2020/sep/28/us-election-simulator-swing-states-biden-trump"
               target="blank">
-              <div class="text"><b>Guardian Visuals</b> Build your own US election interactive
+              <div class="text"><b>Guardian Visuals</b></br> Build your own US election interactive
               </div>
             </a>
           </div>
@@ -70,7 +81,7 @@
           <div class="overlay">
             <a href="https://www.theguardian.com/us-news/ng-interactive/2020/sep/02/electoral-college-explained-biden-uphill-battle-us-election"
               target="blank">
-              <div class="text"><b>Guardian Visuals</b> Electoral college explained
+              <div class="text"><b>Guardian Visuals</b></br> Electoral college explained
               </div>
             </a>
           </div>
@@ -82,7 +93,7 @@
           <img class="work-img" src="work/icon-eu-climate.png" alt="EU climate change targets emissions"></a>
           <div class="overlay">
             <a href=https://compjcdf.github.io/climate-kidz/ target="blank">
-              <div class="text"><b>Cardiff University</b> The EU & Climate Targets
+              <div class="text"><b>Cardiff University</b></br> The EU & Climate Targets
               </div>
             </a>
           </div>
@@ -93,7 +104,7 @@
           <img class="work-img" src="work/icon-remote.png" alt="wfh remote workers"></a>
           <div class="overlay">
             <a href=https://h-robertson.github.io/workingfromhome/ target="blank">
-              <div class="text"><b>Cardiff University</b> Working From Home
+              <div class="text"><b>Cardiff University</b></br> Working From Home
               </div>
             </a>
           </div>
@@ -104,7 +115,7 @@
           <img class="work-img" src="work/icon-GI-india.png" alt="graphical insight india"></a>
           <div class="overlay">
             <a href="work/indian-doctors-GI.png" target="blank" alt="graphical insight india">
-              <div class="text"><b>Financial Times</b> Graphical Insight: India's Medical Brain Drain</div>
+              <div class="text"><b>Financial Times</b></br>Graphical Insight: India's Medical Brain Drain</div>
             </a>
           </div>
         </div>
@@ -114,7 +125,7 @@
           <img class="work-img" src="work/icon-GI-death-pen.png" alt="graphical insight US death penalty"></a>
           <div class="overlay">
             <a href="work/death-penalty-GI.png" target="blank" alt="graphical insight death penalty US">
-              <div class="text"><b>Financial Times</b> Graphical Insight: US Death Penalty <em>(w/ Katherine
+              <div class="text"><b>Financial Times</b></br> Graphical Insight: US Death Penalty <em>(w/ Katherine
                   Riley)</em>
               </div>
             </a>
@@ -127,7 +138,7 @@
           <div class="overlay">
             <a href="https://www.ft.com/content/80200a46-b27c-11e8-8d14-6f049d06439c?list=intlhomepage" target="blank"
               alt="gender diversity financial services">
-              <div class="text"><b>Financial Times</b><em> Graphic credit:</em> FinServ Gender Diversity
+              <div class="text"><b>Financial Times</b></br><em> Graphic credit:</em> FinServ Gender Diversity
               </div>
             </a>
           </div>
@@ -138,7 +149,7 @@
           <img class="work-img" src="work/icon-airbnb.png" alt="airbnb London Edinburgh affordability"></a>
           <div class="overlay">
             <a href="https://airbnb-feature.glitch.me/" target="blank">
-              <div class="text"><b>Cardiff University</b> Airbnb: London & Edinburgh
+              <div class="text"><b>Cardiff University</b></br> Airbnb: London & Edinburgh
               </div>
             </a>
           </div>
@@ -149,7 +160,7 @@
           <img class="work-img" src="work/icon-social-atlas.png" alt="London gender social atlas"></a>
           <div class="overlay">
             <a href="work/social-atlas.pdf " target="blank">
-              <div class="text"><b>UCL Geography </b> Social atlas of gender in London
+              <div class="text"><b>UCL Geography </b></br> Social atlas of gender in London
               </div>
             </a>
           </div>
@@ -160,7 +171,7 @@
           <img class="work-img" src="work/icon-evi-brief.png" alt="evidence brief housing urban analytics"></a>
           <div class="overlay">
             <a href="work/housing-evidence-briefs.pdf" target="blank">
-              <div class="text"><b>UCL Geography</b> Evidence Briefs: Housing & Urban Analytics
+              <div class="text"><b>UCL Geography</b></br> Evidence Briefs: Housing & Urban Analytics
               </div>
             </a>
           </div>
