--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
           <img class="work-img" src="work/icon-us-elex-dashboard.png" alt="US election interactive dashboard"></a>
           <div class="overlay">
             <a href="https://h-robertson.github.io/us-election-dashboard/" target="blank">
-              <div class="text"><b>Cardiff University </b></br>US election dashboard
+              <div class="text"><b>Cardiff University </b></br>US election 2020 interactive dashboard
               </div>
             </a>
           </div>
