text updates to home, skills & experience

--- a/skills.html
+++ b/skills.html
@@ -424,20 +424,23 @@
         development
         taught me how to properly build static HTML pages with appropriate CSS rules and selectors.</p>
 
-      <p>This module also introduced me to <b>Javascript</b>, and how to add interactivity into static HTML webpages.
+      <p>This past year, I've developed my <b>Javascript</b> skills, learning how to create static and
+        interactive visualisations in <b>d3.js</b>.</p>
+      <p>I've realised that data visualisation is something I'm particularly interested in, and my aim is to
+        create more in-depth projects that make use of innovative graphics, animation, interactivity and scrollytelling.
       </p>
-
-      <p>This year, I'm studying more about data visualisation by learning how to create static and
-        interactive charts in <b>d3.js</b>.</p>
     </div>
 
     <div class="output-div" id="design-div">
       <h4>Design</h4>
-      <p> I'm familiar with
-        <b>Adobe Photoshop</b> and <b>InDesign</b>, and have had more experience with <b>Illustrator</b>, mainly for
-        creating
-        infographic-style pieces. At the FT, I also used Illustrator to
+      <p>I am confident in using <b>Adobe Illustrator</b>, and am also familiar with <b>Photoshop</b> and
+        <b>InDesign</b>.</p>
+      <p> I mainly use Illustrator for creating
+        infographic-style pieces. At the FT and the Guardian, I also used Illustrator to
         fine-tune static graphics from SVG files.</p>
+      <p>While Adobe is fantastic, it's pretty expensive, so I've recently purchased the <b>Affinity Suite by Serif</b>.
+        I've really enjoyed switching to these products and have found I'm able to do most things I can in Adobe using
+        them.</p>
     </div>
 
     <div class="output-div" id="map-div">
