--- a/experience.html
+++ b/experience.html
@@ -55,24 +55,24 @@
       <tbody>
         <tr>
           <th scope="row">
-            <date datetime="2020-07-27">July 2020</date>
-          </th>
-          <td class="dot">
-            <img style="display:block;" src="imgs/timeline-dot-red.png">
-          </td>
-          <td>
-            <h4 class="current">The Guardian: Google News Fellowship 2020</h4>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">
-            <date datetime="2019-09-20">September 2019</date>
+            <date datetime="2019-09-20">Sept 2019 - Dec 2020</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-red.png">
           </td>
           <td>
             <h4 class="current"> Cardiff University: MSc Computational & Data Journalism</h4>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">
+            <date datetime="2020-07-27">July - Sept 2020</date>
+          </th>
+          <td class="dot">
+            <img style="display:block;" src="imgs/timeline-dot-teal.png">
+          </td>
+          <td>
+            <h4>The Guardian: Google News Fellowship 2020</h4>
           </td>
         </tr>
         <tr>
@@ -88,7 +88,7 @@
         </tr>
         <tr>
           <th scope="row">
-            <date datetime="2018-11-06">November 2018</date>
+            <date datetime="2018-11-06">Nov 2018</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
@@ -102,7 +102,7 @@
         </tr>
         <tr>
           <th scope="row">
-            <date datetime="2018-07-01">July-September 2018</date>
+            <date datetime="2018-07-01">July-Sept 2018</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
@@ -140,7 +140,7 @@
         </tr>
         <tr>
           <th scope="row">
-            <date datetime="2016-09-20">September 2016</date>
+            <date datetime="2016-09-20">Sept 2016</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
@@ -153,7 +153,7 @@
         </tr>
         <tr>
           <th scope="row">
-            <date datetime="2014-04-08">8th April 2014</date>
+            <date datetime="2014-04-08">8th Apr 2014</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
