--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 				and clear, concise writing, I am now looking for professional opportunities to join this field.</p> -->
 
 			<h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
-			<p>I'm currently working with the Guardian's Visuals team as their Google News Fellow and am also enrolled
-				on the MSc in Computational and Data Journalism at Cardiff University which I will
-				finish this autumn.</p>
+			<p>I am about to finish an MSc in Computational and Data Journalism at Cardiff University and have
+				recently been working with the Guardian's Visuals team as their Google News Fellow, focusing on the 2020
+				US election.</p>
 			<p>I became interested in data visualisation when I was finishing
 				school, and went to study Geography at UCL on their Q-step course, where I worked on data
 				analysis, mapping and visualisation skills.</p>
