Update - flourish, etc.

--- a/experience.html
+++ b/experience.html
@@ -55,13 +55,24 @@
       <tbody>
         <tr>
           <th scope="row">
-            <date datetime="2019-09-20">Sept 2019 - Dec 2020</date>
+            <date datetime="2019-09-20">Jan 2021 - Present</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-red.png">
           </td>
           <td>
-            <h4 class="current"> Cardiff University: MSc Computational & Data Journalism</h4>
+            <h4 class="current"> Flourish: Support and Content Intern</h4>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">
+            <date datetime="2019-09-20">Sept 2019 - Dec 2020</date>
+          </th>
+          <td class="dot">
+            <img style="display:block;" src="imgs/timeline-dot-teal.png">
+          </td>
+          <td>
+            <h4> Cardiff University: MSc Computational & Data Journalism</h4>
           </td>
         </tr>
         <tr>
