--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<p>Having found that data journalism provides a great place to combine skills of research, analysis, design
 				and clear, concise writing, I am now looking for professional opportunities to join this field.</p> -->
 
-			<h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
+			<!-- <h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
 			<p>I am about to finish an MSc in Computational and Data Journalism at Cardiff University and have
 				recently been working with the Guardian's Visuals team as their Google News Fellow, focusing on the 2020
 				US election.</p>
@@ -78,7 +78,24 @@
 
 			<p>Over these past few years, I've found that data journalism provides a great place to combine my interests
 				of research, analysis, design
-				and clear, concise writing, and I am now seeking professional opportunities in this field.</p>
+				and clear, concise writing, and I am now seeking professional opportunities in this field.</p> -->
+
+			<h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
+			<p>I am a Support and Content Intern at Flourish, where I help our customers with queries about using
+				Flourish tools, make custom visualisations and stories, and create content like help docs.</p>
+			<p>I was previously a Google News Initiative Fellow at Guardian Visuals and a couple of years ago I
+				completed an internship with the Financial Times' Data and Visual Journalism team.</p>
+
+			<p>I have recently graduated from an MSc in Computational and Data Journalism at Cardiff University, and I
+				have a BA in Geography with Quantitative Methods from University College London.</p>
+
+			<p>During my studies, I became particularly interested in data visualisation, specifically in creating
+				interactive graphics and data-driven stories. While working at Flourish, I'm developing my technical
+				skills further, learning how templates are built and how to debug issues. My hope is that as my
+				knowledge of Javascript progresses, I can get more involved in the developer side of the data
+				visualisation field.
+			</p>
+
 		</div>
 		<div class="row justify-content-md-center mb-5">
 			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 d-none d-sm-block">
