--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 				and clear, concise writing, and I am now seeking professional opportunities in this field.</p> -->
 
 			<h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
-			<p>I am a Support and Content Intern at Flourish, where I help our customers with queries about using
+			<p>I am a Support and Content Intern at <a href="https://flourish.studio/">Flourish</a>, a data
+				visualisation and storytelling platform. I help our customers with queries about using
 				Flourish tools, make custom visualisations and stories, and create content like help docs.</p>
 			<p>I was previously a Google News Initiative Fellow at Guardian Visuals and a couple of years ago I
 				completed an internship with the Financial Times' Data and Visual Journalism team.</p>
