--- a/experience.html
+++ b/experience.html
@@ -55,18 +55,29 @@
       <tbody>
         <tr>
           <th scope="row">
-            <date datetime="2019-09-20">Jan 2021 - Present</date>
+            <date datetime="2021-04-12">Apr 2021 - Present</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-red.png">
           </td>
           <td>
-            <h4 class="current"> Flourish: Support and Content Intern</h4>
+            <h4 class="current"> Flourish: Support Specialist</h4>
           </td>
         </tr>
         <tr>
           <th scope="row">
-            <date datetime="2019-09-20">Sept 2019 - Dec 2020</date>
+            <date datetime="2021-01-04">Jan 2021 - Apri 2021</date>
+          </th>
+          <td class="dot">
+            <img style="display:block;" src="imgs/timeline-dot-teal.png">
+          </td>
+          <td>
+            <h4> Flourish: Support and Content Intern</h4>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">
+            <date datetime="2020-09-20">Sept 2019 - Dec 2020</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
