--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 				and clear, concise writing, and I am now seeking professional opportunities in this field.</p> -->
 
 			<h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
-			<p>I am a Support and Content Intern at <a href="https://flourish.studio/">Flourish</a>, a data
-				visualisation and storytelling platform. I help our customers with queries about using
-				Flourish tools, make custom visualisations and stories, and create content like help docs.</p>
+			<p>I am a Support Specialist at <a href="https://flourish.studio/">Flourish</a>, a data
+				visualisation and storytelling platform. I work across the <b>support</b>, <b>content</b>, and <b>services</b> teams; helping our customers with queries about using
+				Flourish, making custom visualisations and stories, and creating content like help docs and blog posts.</p>
 			<p>I was previously a Google News Initiative Fellow at Guardian Visuals and a couple of years ago I
 				completed an internship with the Financial Times' Data and Visual Journalism team.</p>
 
-			<p>I have recently graduated from an MSc in Computational and Data Journalism at Cardiff University, and I
+			<p>I graduated last year with an MSc in Computational and Data Journalism from Cardiff University, and I
 				have a BA in Geography with Quantitative Methods from University College London.</p>
 
 			<p>During my studies, I became particularly interested in data visualisation, specifically in creating
