--- a/experience.html
+++ b/experience.html
@@ -55,18 +55,40 @@
       <tbody>
         <tr>
           <th scope="row">
-            <date datetime="2021-04-12">Apr 2021 - Present</date>
+            <date datetime="2021-04-12">June 2022 - Present</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-red.png">
           </td>
           <td>
-            <h4 class="current"> Flourish: Support Specialist</h4>
+            <h4 class="current"> Flourish: Software Engineer</h4>
           </td>
         </tr>
         <tr>
           <th scope="row">
-            <date datetime="2021-01-04">Jan 2021 - Apri 2021</date>
+            <date datetime="2021-01-04">July 2021 - June 2022</date>
+          </th>
+          <td class="dot">
+            <img style="display:block;" src="imgs/timeline-dot-teal.png">
+          </td>
+          <td>
+            <h4> Flourish: Product Expert</h4>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">
+            <date datetime="2021-01-04">Apr - July 2021</date>
+          </th>
+          <td class="dot">
+            <img style="display:block;" src="imgs/timeline-dot-teal.png">
+          </td>
+          <td>
+            <h4> Flourish: Support Specialist</h4>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">
+            <date datetime="2021-01-04">Jan 2021 - April 2021</date>
           </th>
           <td class="dot">
             <img style="display:block;" src="imgs/timeline-dot-teal.png">
