--- a/index.html
+++ b/index.html
@@ -51,43 +51,13 @@
 	<!-- Main page -->
 	<div class="site-content container-fluid ">
 		<div class="aboutme-text">
-			<!-- <p>My name is Helena (Helli) Robertson and I'm currently a student on Cardiff University's MSc in
-				Computational and Data Journalism.</p>
-			<p>I became interested in data visualisation when I was finishing
-				school, and went to study Geography at UCL on their Q-step course, where I worked on data
-				analysis, mapping and visualisation skills.</p>
-			<p>During my undergraduate course, I found out more about data journalism, undertaking an
-				internship with the Data and Visual Journalism team at the Financial Times during my penultimate year.
-			</p>
-
-			<p>Having found that data journalism provides a great place to combine skills of research, analysis, design
-				and clear, concise writing, I am now looking for professional opportunities to join this field.</p> -->
-
-			<!-- <h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
-			<p>I am about to finish an MSc in Computational and Data Journalism at Cardiff University and have
-				recently been working with the Guardian's Visuals team as their Google News Fellow, focusing on the 2020
-				US election.</p>
-			<p>I became interested in data visualisation when I was finishing
-				school, and went to study Geography at UCL on their Q-step course, where I worked on data
-				analysis, mapping and visualisation skills.</p>
-			<p>During my undergraduate course, I found out more about data journalism, undertaking an
-				internship with the Data and Visual Journalism team at the Financial Times during my penultimate year.
-			</p>
-			<p>I enrolled on the course at Cardiff to learn more about the journalistic side of the field and how to
-				create engaging interactive graphics and stories.</p>
-
-			<p>Over these past few years, I've found that data journalism provides a great place to combine my interests
-				of research, analysis, design
-				and clear, concise writing, and I am now seeking professional opportunities in this field.</p> -->
-
-			<h2 style="color:#7c0d2f">My name is Helena (<b>Helli</b>) Robertson.</h2>
-			<p>I am a Support Specialist at <a href="https://flourish.studio/">Flourish</a>, a data
-				visualisation and storytelling platform. I work across the <b>support</b>, <b>content</b>, and <b>services</b> teams; helping our customers with queries about using
-				Flourish, making custom visualisations and stories, and creating content like help docs and blog posts.</p>
-			<p>I was previously a Google News Initiative Fellow at Guardian Visuals and a couple of years ago I
+			<h2 style="color:#7c0d2f">My name is Helena (<b>Helly</b>) Robertson.</h2>
+			<p>I am a Software Engineer at <a href="https://flourish.studio/">Flourish</a>, a data
+				visualisation and storytelling platform that's part of the <a href="https://www.canva.com/">Canva</a> family. I work on the template team, building templates for different chart types with reusable module components.</p>
+			<p> Before Flourish, I was previously a Google News Initiative Fellow at Guardian Visuals and a couple of years ago I
 				completed an internship with the Financial Times' Data and Visual Journalism team.</p>
 
-			<p>I graduated last year with an MSc in Computational and Data Journalism from Cardiff University, and I
+			<p>I graduated in 2020 with an MSc in Computational and Data Journalism from Cardiff University, and I
 				have a BA in Geography with Quantitative Methods from University College London.</p>
 
 			<p>During my studies, I became particularly interested in data visualisation, specifically in creating
